# tokens

./: .gitignore  README.md  data.dvc  pyproject.toml  resources.dvc
.dvc/: config
notebooks/: main.ipynb
scripts/: compute_perplexity.py  merge_tokenizer.py  train_tokenizer.py  transform_data.py
src/: constants.py  data.py  utils.py
stats/: perplexity_20240130122143.jsonl
tests/: test_data.py  test_utils.py  tokenizer.json
tests/temp/: merges.txt  tokenizer.json  vocab.json
